--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@ body {
   padding: 0;
   margin: 0;
   height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -22,4 +22,15 @@ a {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+.action-cell-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.action-cell-button__text {
+  self-align: center;
 }
